--- a/carmodels/carmodels/templates/add_vehicle.html
+++ b/carmodels/carmodels/templates/add_vehicle.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <h1>Add a New Vehicle</h1>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit</button>
