--- a/carmodels/carmodels/templates/edit_vehicle.html
+++ b/carmodels/carmodels/templates/edit_vehicle.html
@@ -5,7 +5,10 @@
 
 {% block content %}
 <h1>Edit Vehicle - {{ vehicle.brand }} {{ vehicle.model }}</h1>
-<form method="POST">
+{% if vehicle.picture %}
+<img src="{{ vehicle.picture.url }}" alt="{{ vehicle.brand }} {{ vehicle.model }}" class="vehicle-image">
+{% endif %}
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save Changes</button>
